# local-LLM-agent-mcp-read

./: README.md  config.toml  inspect_any.py  pyproject.toml
src/mcp_browser_config/: __init__.py
stage1/: README.md  docker-compose.yml
stage1/searxng/: settings.yml
stage2/src/mcp_agent_02/: main.py
stage2/src/mcp_browser_02/: main.py
stage2/src/mcp_search_part3/: main.py
